--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <p>Estudo na puc PR, tenho 21 anos. E estou anciosa para meu primeiro estagio!</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
+            <p class="badge bg-secondary">ingles</p>
+            <p class="badge bg-secondary">frances</p>
             <p class="badge bg-secondary">JavaScript</p>
             <p class="badge bg-secondary">Scratch</p>
         </div>
